# opentok-rs

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.cargo-husky/hooks/: pre-commit
.github/workflows/: doc.yml  rust.yml
basic_video_chat/: all.html  fn.main.html  index.html
basic_video_chat/cli/: fn.parse_cli.html  index.html
custom_video_capturer/: all.html  fn.main.html  index.html
custom_video_capturer/cli/: fn.parse_cli.html  index.html
examples/: Cargo.toml  build.rs
examples/src/: capturer.rs  cli.rs  cli.yaml  common.rs  renderer.rs
implementors/lazy_static/: trait.LazyStatic.js
implementors/opentok/: trait.IntoResult.js
opentok/: Cargo.toml  all.html  build.rs  enum.OtcError.html  fn.deinit.html  fn.init.html  index.html  sidebar-items.js  trait.IntoResult.html  type.OtcResult.html
opentok-sys/: Cargo.toml  README.md  build.rs
opentok-sys/libopentok/include/: opentok.h
opentok-sys/libopentok/include/opentok/: audio_device.h  base.h  capabilities.h  config.h  connection.h  error.h  media_utils.h  publisher.h  session.h  stream.h  subscriber.h  video_capturer.h  video_frame.h
opentok/audio_device/: enum.AudioDeviceError.html  fn.initialize.html  fn.set_capture_callbacks.html  fn.set_render_callbacks.html  index.html  sidebar-items.js  struct.AudioDevice.html  struct.AudioDeviceCallbacks.html  struct.AudioDeviceCallbacksBuilder.html  struct.AudioDeviceSettings.html  struct.AudioSample.html  struct.AudioSampleData.html
opentok/connection/: index.html  struct.Connection.html
opentok/enums/: enum.OtcError.html  trait.IntoResult.html  type.OtcResult.html
opentok/log/: enum.LogLevel.html  fn.enable_log.html  fn.logger_callback.html  index.html  sidebar-items.js  struct.LOGGER_CALLBACKS.html  type.LoggerCallback.html
opentok/publisher/: enum.PublisherError.html  index.html  sidebar-items.js  struct.INSTANCES.html  struct.Publisher.html  struct.PublisherCallbacks.html  struct.PublisherCallbacksBuilder.html
opentok/session/: enum.SessionError.html  index.html  sidebar-items.js  struct.INSTANCES.html  struct.Session.html  struct.SessionCallbacks.html  struct.SessionCallbacksBuilder.html
opentok/src/: audio_device.rs  connection.rs  enums.rs  lib.rs  log.rs  macros.rs  publisher.rs  session.rs  stream.rs  subscriber.rs  video_capturer.rs  video_frame.rs
opentok/src/utils/: capturer.rs  common.rs  mod.rs  publisher.rs  renderer.rs  subscriber.rs
opentok/stream/: enum.StreamVideoType.html  index.html  sidebar-items.js  struct.Stream.html
opentok/subscriber/: enum.SubscriberError.html  enum.VideoReason.html  index.html  sidebar-items.js  struct.INSTANCES.html  struct.Subscriber.html  struct.SubscriberCallbacks.html  struct.SubscriberCallbacksBuilder.html
opentok/tests/: integration.rs
opentok/video_capturer/: index.html  sidebar-items.js  struct.VideoCapturer.html  struct.VideoCapturerCallbacks.html  struct.VideoCapturerCallbacksBuilder.html  struct.VideoCapturerSettings.html
opentok/video_frame/: enum.FrameFormat.html  enum.FramePlane.html  index.html  sidebar-items.js  struct.VideoFrame.html
opentok_rs_sys/: all.html  constant.OTC_VIDEO_FRAME_METADATA_MAX_SIZE.html  constant.otc_constant_OTC_FALSE.html  constant.otc_constant_OTC_SUCCESS.html  constant.otc_constant_OTC_TRUE.html  constant.otc_error_OTC_GENERIC_ERROR.html  constant.otc_error_code_OTC_CAMERA_FAILED.html  constant.otc_error_code_OTC_CONNECTION_DROPPED.html  constant.otc_error_code_OTC_CONNECTION_TIMED_OUT.html  constant.otc_error_code_OTC_FATAL.html  constant.otc_error_code_OTC_INVALID_PARAM.html  constant.otc_error_code_OTC_UNKNOWN_PUBLISHER_INSTANCE.html  constant.otc_error_code_OTC_UNKNOWN_SUBSCRIBER_INSTANCE.html  constant.otc_error_code_OTC_VIDEO_CAPTURE_FAILED.html  constant.otc_error_code_OTC_VIDEO_RENDER_FAILED.html  constant.otc_error_code_OT_UNABLE_TO_ACCESS_MEDIA_ENGINE.html  constant.otc_log_level_OTC_LOG_LEVEL_ALL.html  constant.otc_log_level_OTC_LOG_LEVEL_DEBUG.html  constant.otc_log_level_OTC_LOG_LEVEL_DISABLED.html  constant.otc_log_level_OTC_LOG_LEVEL_ERROR.html  constant.otc_log_level_OTC_LOG_LEVEL_FATAL.html  constant.otc_log_level_OTC_LOG_LEVEL_INFO.html  constant.otc_log_level_OTC_LOG_LEVEL_MSG.html  constant.otc_log_level_OTC_LOG_LEVEL_TRACE.html  constant.otc_log_level_OTC_LOG_LEVEL_WARN.html  constant.otc_publisher_error_code_OTC_PUBLISHER_INTERNAL_ERROR.html  constant.otc_publisher_error_code_OTC_PUBLISHER_SESSION_DISCONNECTED.html  constant.otc_publisher_error_code_OTC_PUBLISHER_TIMED_OUT.html  constant.otc_publisher_error_code_OTC_PUBLISHER_UNABLE_TO_PUBLISH.html  constant.otc_publisher_error_code_OTC_PUBLISHER_WEBRTC_ERROR.html  constant.otc_publisher_video_type_OTC_PUBLISHER_VIDEO_TYPE_CAMERA.html  constant.otc_publisher_video_type_OTC_PUBLISHER_VIDEO_TYPE_SCREEN.html  constant.otc_session_error_code_OTC_SESSION_AUTHORIZATION_FAILURE.html  constant.otc_session_error_code_OTC_SESSION_BLOCKED_COUNTRY.html  constant.otc_session_error_code_OTC_SESSION_CONNECTION_DROPPED.html  constant.otc_session_error_code_OTC_SESSION_CONNECTION_FAILED.html  constant.otc_session_error_code_OTC_SESSION_CONNECTION_LIMIT_EXCEEDED.html  constant.otc_session_error_code_OTC_SESSION_CONNECTION_REFUSED.html  constant.otc_session_error_code_OTC_SESSION_CONNECTION_TIMED_OUT.html  constant.otc_session_error_code_OTC_SESSION_FORCE_UNPUBLISH_OR_INVALID_STREAM.html  (+233 more)
opentok_utils/: all.html  index.html  sidebar-items.js
opentok_utils/capturer/: index.html  sidebar-items.js  struct.AudioCapturer.html  struct.Capturer.html  struct.CapturerBuffer.html
opentok_utils/common/: fn.gst_from_otc_format.html  index.html  sidebar-items.js  struct.Credentials.html  struct.MissingElement.html
opentok_utils/publisher/: index.html  struct.Publisher.html
opentok_utils/renderer/: index.html  struct.Renderer.html
publisher_only/: all.html  fn.main.html  index.html
subscriber_only/: all.html  fn.main.html  index.html
utils/: Cargo.toml
utils/src/: capturer.rs  common.rs  lib.rs  publisher.rs  renderer.rs  subscriber.rs
(+57 files in other folders)
