[package]
name = "examples"
version = "1.0.0"
authors = ["Fernando Jimenez Moreno <fjimenez@igalia.com>"]
edition = "2018"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
opentok = { path = "../opentok" }

[[bin]]
name = "publisher_only"

[[bin]]
name = "custom_video_capturer"
