[package]
name = "examples"
version = "1.0.0"
authors = ["Fernando Jimenez Moreno <fjimenez@igalia.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
byte-slice-cast = "1.0.0"
derive_more = "0.99.14"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
opentok = { path = "../opentok" }
opentok-utils = { path = "../utils" }
json = "0.12"
surf = "2"
clap = { version = "3.0.0-beta.1", features = ["yaml"]}

[dependencies.async-std]
features = ["attributes"]
version = "1"

[[bin]]
name = "basic_video_chat"

[[bin]]
name = "custom_video_capturer"

[[bin]]
name = "publisher_only"

[[bin]]
name = "subscriber_only"
