[package]
name = "opentok-rs-sys"
version = "1.0.5"
description = "Rust FFI bindings for OpenTok SDK"
authors = ["Fernando Jimenez Moreno <ferjmoreno@gmail.com>", "Philippe Normand <philn@igalia.com"]
links = "opentok"
build = "build.rs"
edition = "2021"
license = "MIT"
repository = "https://github.com/opentok-rust/opentok-rs"
documentation = "https://opentok-rust.github.io/opentok-rs/opentok_rs_sys/"
keywords = ["opentok", "tokbox", "vonage", "webrtc", "multimedia"]
categories = ["multimedia", "api-bindings"]

[build-dependencies]
bindgen = "0.58.1"
