[package]
name = "opentok"
version = "1.0.1"
description = "Rust bindings for OpenTok SDK"
authors = ["Fernando Jimenez Moreno <ferjmoreno@gmail.com>", "Philippe Normand <philn@igalia.com"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ferjm/opentok-rs"
documentation = "https://ferjm.github.io/opentok-rs/opentok/"
keywords = ["opentok", "tokbox", "vonage", "webrtc", "multimedia"]
categories = ["multimedia", "external-ffi-bindings"]
readme = "../README.md"

[dependencies]
ffi = { package = "opentok-rs-sys", version = "1.0.0" }
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.8.0"
thiserror = "1.0.24"
anyhow = "1"

[dev-dependencies]
futures = "0.3.17"
opentok-server = { git = "https://github.com/ferjm/opentok-server-rs", branch = "main" }
opentok-utils = { path = "../utils" }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
