[package]
name = "opentok-utils"
version = "0.1.0"
edition = "2018"
description = "Test utilities for the OpenTok SDK Rust bindings"
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
repository = "https://github.com/ferjm/opentok-rs-test-utils"

[dependencies]
anyhow = "1.0.40"
byte-slice-cast = "1.0.0"
derive_more = "0.99.14"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
opentok = { path = "../opentok" }
